<resources>
    <string name="app_name">Staffapp</string>
    <string name="sign_in">Sign in</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="Linking">LINKING</string>
    <string name="Login">LOGIN</string>
    <string name="logo">Staffapp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="employee">select employee</string>
    <string name="item">select item</string>
    <string name="CONFIRM">confirm</string>
    <string name="checking">CHECKING</string>
    <string name="scan">|scan barcode</string>
    <string name="item_description">Item description</string>
    <string name="item_owner">Item owner</string>
    <string name="user">user</string>
    <string name="link">Link</string>
    <string name="check">Check</string>
    <string name="unlink">Unlink</string>
    <string name="settings">SETTINGS</string>
    <string name="LOGOUT">LOGOUT</string>
    <string name="unlinking">UNLINKING</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SELECT_EMPLOYEE">SELECT EMPLOYEE</string>
    <string name="SELECT_ITEM">SELECT ITEM</string>
    <string name="link_item">LINK ITEM</string>
    <string name="link_employee">employee</string>
    <string name="link_to_item">item</string>
    <string name="link_item_barcode">barcode</string>
    <string name="dialog_connection_lost">Connection lost</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="search">search</string>
    <string name="items">item</string>
</resources>