<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_check"
        android:icon="@drawable/ic_baseline_how_to_reg_24"
        android:title="@string/check"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_link"
        android:icon="@drawable/ic_baseline_person_link_24"
        android:title="@string/link"
         />

    <item
        android:id="@+id/menu_unlink"
        android:icon="@drawable/ic_baseline_person_unlink_24"
        android:title="@string/unlink"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        />

</menu>