<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/container_check"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="67dp">

        <TextView
            android:id="@+id/logo"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/logo"
            android:textAlignment="inherit"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="339dp"
            android:layout_height="57dp"
            android:layout_below="@id/logo"
            android:layout_marginStart="50dp"
            android:layout_marginTop="-14dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textAlignment="inherit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_botton"
            android:layout_width="325dp"
            android:layout_height="76dp"
            android:layout_below="@id/settings"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="109dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="20dp"
            android:background="#75FFFFFF"
            android:gravity="center"
            android:text="@string/LOGOUT"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editTextEmail"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_below="@id/settings"
            android:layout_marginStart="50dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textAlignment="inherit"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>
</RelativeLayout>